--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ gunicorn = "*"
 python-decouple = "*"
 whitenoise = "*"
 pyquery = "*"
+dj-database-url = "*"
 
 [requires]
 python_version = "3.7"
