--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 .venv/
-/public/static/
-/public/media/
-/server/static/client/
+/example/static/
+/example/www/static/
+/example/www/media/
 *.pyc
 *.sqlite3
 .env
