--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "name": "dj-super-rentals",
   "description": "A simple app to demonstrate how to integrate Django & Ember.",
   "repository": "https://github.com/josephabrahams/dj-super-rentals",
-  "logo": "https://dj-super-rentals.herokuapp.com/static/favicon.png",
+  "logo": "https://dj-super-rentals.herokuapp.com/static/assets/images/teaching.png",
   "keywords": ["Django", "Ember", "Ember.js"],
   "env":{
     "SECRET_KEY": {
