Change to Heroku Node.js build process
Heroku has begun executing the "build" script defined in package.json.
Read more: <https://devcenter.heroku.com/changelog-items/1573>

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "scripts": {
     "start": "npm start --prefix=superrentals/ember",
-    "postinstall": "npm install --prefix=superrentals/ember"
+    "postinstall": "npm install --prefix=superrentals/ember",
+    "heroku-postbuild": "npm run build:production --prefix=superrentals/ember"
   },
   "cacheDirectories": [
     "superrentals/ember/node_modules"
