--- a/superrentals/ember/package.json
+++ b/superrentals/ember/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app",
+  "name": "superrentals",
   "version": "0.0.0",
   "private": true,
   "description": "",
@@ -14,6 +14,7 @@
     "which": "which ember",
     "build": "ember build",
     "build:watch": "ember build --watch",
+    "build:test": "ember build --environment=test",
     "build:production": "ember build --environment=production",
     "lint:hbs": "ember-template-lint .",
     "lint:js": "eslint .",
@@ -34,6 +35,7 @@
     "ember-cli-htmlbars": "^3.0.0",
     "ember-cli-htmlbars-inline-precompile": "^1.0.3",
     "ember-cli-inject-live-reload": "^1.8.2",
+    "ember-cli-mirage": "^0.4.9",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-template-lint": "^1.0.0-beta.1",
     "ember-cli-tutorial-style": "^3.0.2",
