--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,10 +2,14 @@ version: '3.6'
 services:
   django:
     build: .
+    command: pipenv run python manage.py runserver 0.0.0.0:8000
     environment:
       - DJANGO_PORT=8000
+      - DATABASE_URL=postgres://root:password@postgresql/superrentals
+    volumes:
+      - .:/app
     ports:
-      - "18000:8000"
+      - "8000:8000"
     stdin_open: true
     tty: true
     restart: always
@@ -14,6 +18,7 @@ services:
     environment:
       - POSTGRES_USER=root
       - POSTGRES_PASSWORD=password
+      - POSTGRES_DB=superrentals
     restart: always
     ports:
       - "5432:5432"
