--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "start": "npm start --prefix=superrentals/ember",
     "postinstall": "npm install --prefix=superrentals/ember",
-    "heroku-postbuild": "npm run build:production --prefix=superrentals/ember"
+    "build": "npm run build:production --prefix=superrentals/ember"
   },
   "cacheDirectories": [
     "superrentals/ember/node_modules"
