fix mirage rentals mock

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@ MAPBOX_ACCESS_TOKEN=https://account.mapbox.com/access-tokens/
 PORT=8000
 SECRET_KEY=not_secret
 SECURE_SSL_REDIRECT=0
+TEST_PORT=7357
