simplify local development
- Add Honcho so foreman is no longer needed.
- Move to SQLite for local devlelopment.
- Switch PKs to slugs to match Ember example.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
+CONN_MAX_AGE=0
 DATABASE_SSL=0
-DATABASE_URL=postgres://localhost/superrentals
+DATABASE_URL=sqlite:///db.sqlite3
 DEBUG=1
 LIVERELOAD=1
 MAPBOX_ACCESS_TOKEN=https://account.mapbox.com/access-tokens/
